--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "react-fade-in": "^1.1.0",
+    "styled-components": "^5.1.1",
+    "swr": "^0.3.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.45",
+    "@types/react-fade-in": "^0.1.0",
     "@types/styled-components": "^5.1.2",
     "babel-plugin-styled-components": "^1.11.1",
     "typescript": "^3.9.7"
